# QueryQuarry

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
cmd/cli/: main.go
cmd/datastats/: main.go
cmd/server/: main.go
handlers/: count_handler.go  csv_handler.go  query_handler.go  utils.go
queries/: presidents-results.ipynb  presidents.txt
scripts/: cli.py  load_dataset.py  load_dataset_hf.py  make_suffix_array.py
search/: count_occurrences.go  find_documents.go  nearby_words.go  retrieve_documents.go
src/: main.rs
static/: about.html  index.html  scripts.js  styles.css
