[package]
name = "query_quarry"
version = "0.1.0"
edition = "2021"

authors = ["Nathan Barry <nathanbarry@utexas.edu>", "Nicholas Carlini <nicholas@carlini.com>"]

[profile.dev]
opt-level = 3
overflow-checks = false  # Go FAAASSTTT!

[dependencies]
crossbeam = "0.3"
clap = { version = "3.1.1", features = ["derive"] }
